# GA_Cube_Solver

./: CMakeLists.txt  LICENSE  README.md
cube/: CMakeLists.txt  cube.cpp  cube.hpp  matrix.hpp
ga/: CMakeLists.txt  cube_prob.cpp  cube_prob.hpp  cube_sol.cpp  cube_sol.hpp  ga.cpp  ga.hpp  ga_conf.cpp  ga_conf.hpp  logger.cpp  logger.hpp  main.cpp  plotGAData.gp  plot_fit_data.gp  plot_ind_data.gp  test_solution.cpp  utils.hpp
test/: CMakeLists.txt  array2d.cpp  c_test.conf  cube_3.cpp  cube_4.cpp  in_test_4  stable_for_5_runs.conf  test.cpp  test_all.cpp
test/configs/: c1.conf  c2.conf  c3.conf  c4.conf  c5.conf  c6.conf  c7.conf  c8.conf  c9.conf  h1.conf
test/instances/: in_test_3_1  in_test_3_2  in_test_3_3  in_test_4_1  in_test_5_1
utils/: CMakeLists.txt  gen_configs.py  get_overall_result.py  overall_to_latex.py  proc_batch.py  solutionConverter.py
